try solve real-device-only layout problems

--- a/app/styles/pages/app.module.scss
+++ b/app/styles/pages/app.module.scss
@@ -1,7 +1,6 @@
 @use '../mixins' as *;
 
 .app {
-  height: 100%;
   flex: 1;
   display: grid;
   place-content: center;
